Fallback to origin compare if cardname not available

--- a/sound-output-device-chooser@kgshank.net/ui/prefs-dialog40.glade
+++ b/sound-output-device-chooser@kgshank.net/ui/prefs-dialog40.glade
@@ -39,6 +39,8 @@
       <column type="gint"/>
       <!-- column-name CardName -->
       <column type="gchararray"/>
+      <!-- column-name CardDescription -->
+      <column type="gchararray"/>
       <!-- column-name DisplayName -->
       <column type="gchararray"/>
       <!-- column-name DeviceType -->
@@ -538,7 +540,7 @@
                                     <child>
                                       <object class="GtkCellRendererText" id="PortNameRenderer" />
                                       <attributes>
-                                        <attribute name="text">7</attribute>
+                                        <attribute name="text">8</attribute>
                                       </attributes>
                                     </child>
                                   </object>
@@ -553,7 +555,7 @@
                                     <child>
                                       <object class="GtkCellRendererText" id="DeviceTypeRenderer"/>
                                       <attributes>
-                                        <attribute name="text">8</attribute>
+                                        <attribute name="text">9</attribute>
                                       </attributes>
                                     </child>
                                   </object>
